-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.333 2008-09-01 21:21:24 guru Exp $
-----------------------------------------------------------------------------------------
2008-09-01	jluis
	* mapproject.c:		Extended mapproject's -A option by making the fixed point
				optional; if not given we compute azimuths between points.
	* misc/gmtdp.c:		New utility to apply the Douglas-Peucker line-reduction
				algorithm to line data.

2008-08-21	pwessel
	* grdblend.c:		Better treatment of longitude periodicity if -fg is selected.
				E.g., if -Rg is used and a grid is -30/30 in longitude the
				output grid will consider 0-30 and 330-360 correctly.

2008-08-21	remko
	* ps2raster.c:		Needed to backspace a little more to capture BoundingBox at end.

2008-08-14	pwessel
	* grdmath.c:		Some 2nd-order derivatives whose BC yields 0 should yield NaN
				if one or more of the nearby nodes are NaN.  Added NOT operator
	* gmtmath.c:		Same as above for D2DT2.  Added NOT operator.  Also allow data
				columns to contain NaN, and for the time-columns to contain NaN
				if -T is set.
					
2008-08-14	remko
	* blockmedian.c, psxy.c:	Replaced word "quartile" by the proper "quantile".
				Same in man pages.
	* *.c, *.h, *.txt:	Fixed numerous typos. Thanks to Dan Scheirer for listing them.

2008-08-08	remko
	* psscale.c:		Logarithmic scale did not function properly when scale bar
				was vertical. Needed to swap more x/y properties.

2008-08-05	pwessel
	* x2sys/x2sys_get.c:	Now handles -R with longitude periodicity correctly
	* x2sys/x2sys.c:		Swabbing of index files happens automatically

2008-07-23	pwessel
	* mgd77/mgd77track.c:	Enhanced -A option to place cruise ID equidistantly (dist or time) along the track.

2008-07-16	pwessel
	* grdblend.c:		A side-effect of the 2007-02-01 fix was that when the file
				is re-opened the row range is reset.  Now the possible
				offset is computed during initialization but applied when